# bevy-vs-pixi

./: Cargo.toml  README.md
benches/: rng_comparison.rs
src/: main.rs  rectangles.rs
