[package]
name = "bevy_vs_pixi"
version = "0.1.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2024"
description = "A Bevy benchmark to compare against https://benchmarks.slaylines.io/"
repository = "https://github.com/SUPERCILEX/bevy_vs_pixi"
keywords = ["bevy", "benchmark", "pixijs"]
categories = ["games"]
license = "Apache-2.0"

[dependencies]
log = { version = "0.4.22", features = ["release_max_level_off"] }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = "0.6.0"
tracing = { version = "0.1.41", features = ["release_max_level_off"] }

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
    # TODO remove once https://github.com/bevyengine/bevy/pull/16949 is released
    "bevy_window",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "x11",
    "default_font",
    "webgl2",
]

[dev-dependencies]
supercilex-tests = { version = "0.4.13", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
