[package]
name = "bevy_vs_pixi"
version = "0.1.0"
authors = ["Alex Saveau <saveau.alexandre@gmail.com>"]
edition = "2024"
description = "A Bevy benchmark to compare against https://benchmarks.slaylines.io/"
repository = "https://github.com/SUPERCILEX/bevy_vs_pixi"
keywords = ["bevy", "benchmark", "pixijs"]
categories = ["games"]
license = "Apache-2.0"

[dependencies]
log = { version = "0.4.29", features = ["release_max_level_off"] }
rand = { version = "0.9.2", default-features = false }
rand_xoshiro = "0.7.0"
tracing = { version = "0.1.44", features = ["release_max_level_off"] }

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "2d",
]

[dev-dependencies]
supercilex-tests = { version = "0.4.21", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
